--- a/index.html
+++ b/index.html
@@ -23,16 +23,37 @@
                 <ul class="list"></ul>
             </div>
             <div class="resources">
-                <section class="acc hide"></section>
-                <section class="bio hide"></section>
-                <section class="bus hide"></section>
-                <section class="com hide"></section>
-                <section class="eco hide"></section>
-                <section class="eng hide"></section>
-                <section class="mat hide"></section>
-                <section class="fur hide"></section>
-                <section class="psy hide"></section>
-                <section class="med hide"></section>
+                <section class="acc-res hide">
+                    <a href="#">google drive</a>
+                    <a href="#">sme</a>
+                </section>
+                <section class="bio-res hide">
+                    <a href="#">Nothing......</a>
+                </section>
+                <section class="bus-res hide">
+                    <a href="#">Nothing......</a>
+                </section>
+                <section class="com-res hide">
+                    <a href="#">Nothing......</a>
+                </section>
+                <section class="eco-res hide">
+                    <a href="#">Nothing......</a>
+                </section>
+                <section class="eng-res hide">
+                    <a href="#">Nothing......</a>
+                </section>
+                <section class="mat-res hide">
+                    <a href="#">Nothing......</a>
+                </section>
+                <section class="fur-res hide">
+                    <a href="#">Nothing......</a>
+                </section>
+                <section class="psy-res hide">
+                    <a href="#">Nothing......</a>
+                </section>
+                <section class="med-res hide">
+                    <a href="#">Nothing......</a>
+                </section>
                 <section class="phy-res hide">
                     <a href="https://drive.google.com/drive/folders/1f6RWUXp3p7V2sdyJy1POWAN9wvzIrzu1?usp=drive_link">
                         Physics Google Drive
