--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="Embed Title" property="og:title" />
+    <link rel="shortcut icon" href="/img.jpg" type="image/x-icon">
+    <!-- <meta content="Site Description" property="og:description" /> -->
+    <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
+    <meta content="https://embed.com/embedimage.png" property="og:image" />
+    <meta content="#faebd7" data-react-helmet="true" name="theme-color" />
 
     <!-- Linking CSS file -->
     <link rel="stylesheet" href="style.css">
