--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Embed Title" property="og:title" />
+    <meta content="AS/A Level Resources" property="og:title" />
     <link rel="shortcut icon" href="/img.jpg" type="image/x-icon">
+    <meta property='og:image:width' content='1200' />
+    <meta property='og:image:height' content='627' />
+    <meta property=’og:image’
+        content="https://media.discordapp.net/attachments/1190576119909457981/1247592398461341706/20240604_221615.jpg?ex=66609676&is=665f44f6&hm=a5f920c6ed38d08cd6134931517a1a7ae76349d9b28590a905775feeb95db1a4&=&format=webp&width=700&height=700" />
     <!-- <meta content="Site Description" property="og:description" /> -->
     <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
     <meta content="https://embed.com/embedimage.png" property="og:image" />
