--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property='og:image:height' content='627' />
     <meta property=’og:image’
         content="https://media.discordapp.net/attachments/1190576119909457981/1247592398461341706/20240604_221615.jpg?ex=66609676&is=665f44f6&hm=a5f920c6ed38d08cd6134931517a1a7ae76349d9b28590a905775feeb95db1a4&=&format=webp&width=700&height=700" />
-    <!-- <meta content="Site Description" property="og:description" /> -->
+    <meta content="AS/AL Resources (Ebooks, Past Papers, Notes, Syllabus, etc)" property="og:description" />
     <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
     <meta content="https://embed.com/embedimage.png" property="og:image" />
     <meta content="#faebd7" data-react-helmet="true" name="theme-color" />
