--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="AS/A Level Resources" property="og:title" />
-    <link rel="shortcut icon" href="/img.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="/img.png" type="image/x-icon">
     <meta property='og:image:width' content='1200' />
     <meta property='og:image:height' content='627' />
     <meta property=’og:image’
