--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="shortcut icon" href="/img.png" type="image/x-icon">
     <meta property='og:image:width' content='1200' />
     <meta property='og:image:height' content='627' />
-    <meta property=’og:image’
-        content="https://media.discordapp.net/attachments/1190576119909457981/1247592398461341706/20240604_221615.jpg?ex=66609676&is=665f44f6&hm=a5f920c6ed38d08cd6134931517a1a7ae76349d9b28590a905775feeb95db1a4&=&format=webp&width=700&height=700" />
+    <meta property='og:image' content="https://cdn.discordapp.com/attachments/852870520215044097/1247851222363537418/img.png?ex=66618783&is=66603603&hm=564c548748c8c1b0c968e33155c08fad577729fe964ebad3b1052ef54a2b0116&" />
     <meta content="AS/AL Resources (Ebooks, Past Papers, Notes, Syllabus, etc)" property="og:description" />
     <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
     <meta content="https://embed.com/embedimage.png" property="og:image" />
