--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="AS/A Level Resources" property="og:title" />
     <link rel="shortcut icon" href="/img.png" type="image/x-icon">
-    <meta property='og:image:width' content='1200' />
-    <meta property='og:image:height' content='627' />
-    <meta property='og:image' content="https://cdn.discordapp.com/attachments/852870520215044097/1247851222363537418/img.png?ex=66618783&is=66603603&hm=564c548748c8c1b0c968e33155c08fad577729fe964ebad3b1052ef54a2b0116&" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="627" />
+    <meta property="og:image"
+        content="https://cdn.discordapp.com/attachments/852870520215044097/1247851222363537418/img.png?ex=66618783&is=66603603&hm=564c548748c8c1b0c968e33155c08fad577729fe964ebad3b1052ef54a2b0116&" />
     <meta content="AS/AL Resources (Ebooks, Past Papers, Notes, Syllabus, etc)" property="og:description" />
     <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
     <meta content="https://embed.com/embedimage.png" property="og:image" />
@@ -78,7 +79,6 @@
                     <a href="https://www.tutorchase.com/notes/cie-a-level/physics">Chemistry Notes (Tutor Chase)</a>
                 </section>
             </div>
-        </div>
         </div>
     </form>
     <script src="/script.js"></script>
