Added links for maths

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a href="#">google drive</a>
                     <a href="#">sme</a>
                 </section>
-                <section class="bio-res hide">
+                <!-- <section class="bio-res hide">
                     <a href="#">Nothing......</a>
                 </section>
                 <section class="bus-res hide">
@@ -51,11 +51,13 @@
                 </section>
                 <section class="eng-res hide">
                     <a href="#">Nothing......</a>
-                </section>
+                </section> -->
                 <section class="mat-res hide">
-                    <a href="#">Nothing......</a>
+                    <a href="https://drive.google.com/drive/folders/1vy5lARqIOqwW_QxqnfV8ApLdE9uhqE6t?usp=drive_link">
+                        Mathematics (9709) GDrive
+                    </a>
                 </section>
-                <section class="fur-res hide">
+                <!-- <section class="fur-res hide">
                     <a href="#">Nothing......</a>
                 </section>
                 <section class="psy-res hide">
@@ -63,7 +65,7 @@
                 </section>
                 <section class="med-res hide">
                     <a href="#">Nothing......</a>
-                </section>
+                </section> -->
                 <section class="phy-res hide">
                     <a href="https://drive.google.com/drive/folders/1f6RWUXp3p7V2sdyJy1POWAN9wvzIrzu1?usp=drive_link">
                         Physics Google Drive
