Added links for maths

--- a/index.html
+++ b/index.html
@@ -56,6 +56,21 @@
                     <a href="https://drive.google.com/drive/folders/1vy5lARqIOqwW_QxqnfV8ApLdE9uhqE6t?usp=drive_link">
                         Mathematics (9709) GDrive
                     </a>
+                    <a href="https://www.tutorchase.com/notes/cie-a-level/mathematics">
+                        Mathematics (Tutor Chase)
+                    </a>
+                    <a href="https://www.youtube.com/watch?v=uuBt6KBUy9w&list=PLaQBxdrnmtNxi_Ne7a2ZBWJ7ZI39EoZil&pp=iAQB">
+                        Pure 1 | Exam Hack Series AS Mathematics
+                    </a>
+                    <a href="https://www.youtube.com/watch?v=nhVkqvhwG3g&list=PLYNwTLhq9xZbPekX7M6tinBY3XqDf22UB&pp=iAQB">
+                        A levels Mathematics (9709) by Ginger Mathematician
+                    </a>
+                    <a href="https://www.youtube.com/watch?v=d6-AXJtzzOs&list=PLtxyMEBEejjnBr06Buzn4SM13CadAtoE3&pp=iAQB">
+                        Quick Revision Videos (Pure 1) by MathPrep with Ahmad Bilal
+                    </a>
+                    <a href="Statistics 1 Quick Revision Videos (S1) by MathPrep with Ahmad Bilal">
+                        Statistics 1 Quick Revision Videos (S1) by MathPrep with Ahmad Bilal
+                    </a>
                 </section>
                 <!-- <section class="fur-res hide">
                     <a href="#">Nothing......</a>
