--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <!-- Linking CSS file -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
     <script src="https://kit.fontawesome.com/0eb3a7602a.js" crossorigin="anonymous"></script>
 
     <title>AS/AL Resources</title>
