--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <meta content="#faebd7" data-react-helmet="true" name="theme-color" />
 
     <!-- Linking CSS file -->
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="media.css">
+    <link rel="stylesheet" href="/style.css">
+    <!-- <link rel="stylesheet" href="/media.css"> -->
     <script src="https://kit.fontawesome.com/0eb3a7602a.js" crossorigin="anonymous"></script>
 
     <title>AS/AL Resources</title>
